# film-review

./: .gitignore  pyproject.toml
FilmReview/: db.sqlite3  manage.py
FilmReview/FilmReview/: asgi.py  settings.py  urls.py  wsgi.py
FilmReview/FilmReviewApp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
FilmReview/FilmReviewApp/migrations/: 0001_initial.py  0002_rename_movie_id_review_movie_and_more.py
FilmReview/FilmReviewApp/templates/FilmReviewApp/: index.html  login.html  main.html  movie.html  signup.html
