[tool.poetry]
name = "film-review"
version = "0.1.0"
description = ""
authors = ["see-quad-sir <hp.personalcomputer.mine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
